target_sources(AnemoneRuntime.Base
    PRIVATE
        "AdaptiveTimer.cxx"
        "Checked.cxx"
        "Compression.cxx"
        "ConsoleFunction.cxx"
        "ConsoleVariable.cxx"
        "DateTime.cxx"
        "Duration.cxx"
        "Flags.cxx"
        "Float.cxx"
        "FNV.cxx"
        "HandleTable.cxx"
        "Instant.cxx"
        "Int128.cxx"
        "MemoryBuffer.cxx"
        "String.cxx"
        "Unicode.cxx"
        "Uuid.cxx"
        "Version.cxx"
        "XXHash64.cxx"
    PUBLIC FILE_SET HEADERS FILES
        "AdaptiveTimer.hxx"
        "Bitwise.hxx"
        "Checked.hxx"
        "Compression.hxx"
        "ConsoleFunction.hxx"
        "ConsoleVariable.hxx"
        "DateTime.hxx"
        "Delegate.hxx"
        "Duration.hxx"
        "Flags.hxx"
        "Float.hxx"
        "FNV.hxx"
        "FunctionRef.hxx"
        "HandleTable.hxx"
        "Instant.hxx"
        "Int128.hxx"
        "Intrusive.hxx"
        "KnownColor.hxx"
        "LockfreeIntrusive.hxx"
        "Memory.hxx"
        "MemoryBuffer.hxx"
        "Reference.hxx"
        "Reflection.hxx"
        "String.hxx"
        "Unicode.hxx"
        "UninitializedObject.hxx"
        "Uuid.hxx"
        "Version.hxx"
        "XXHash64.hxx"
)

add_subdirectory("Memory")
add_subdirectory("Platform")
