target_sources(AnemoneRuntime.Base
    PRIVATE
        "Easing.cxx"
    PUBLIC FILE_SET HEADERS FILES
        "Aligned.hxx"
        "Bounds.hxx"
        "Bounds.inl"
        "Easing.hxx"
        "Fixed.hxx"
        "Functions.hxx"
        "Matrix3x2.hxx"
        "Matrix3x2.inl"
        "Numbers.hxx"
        "Packed.hxx"
        "PidController.hxx"
        "Point.hxx"
        "Point.inl"
        "Rect.hxx"
        "Rect.inl"
        "Size.hxx"
        "Size.inl"
        "Thickness.hxx"
        "Thickness.inl"
        "Transform2.hxx"
        "Transform2.inl"
        "Types.hxx"
)

add_subdirectory("Detail")
